# aws-env-manager

./: README.md  env_manager.py  pyproject.toml  requirements.txt
Formula/: env_manager.rb
env_manager/: cli.py  env_manager.py  utils.py
